IDEA-216116 Update VM options to new JBR 11 ones in all shared run configurations (like IDEA.xml) and tests on TeamCity (TestingTasksImpl).
Updated GUI tests

GitOrigin-RevId: 1d85b81c3943ee26bc87cf99fab243b19ebb837e